[gd_scene load_steps=16 format=3 uid="uid://b3jnvwtu7da8p"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_goj53"]
[ext_resource type="Texture2D" uid="uid://dfq1gauyliwmp" path="res://resources/world/OXIGENO.png" id="2_088mj"]
[ext_resource type="Texture2D" uid="uid://baa3inqf4gykj" path="res://resources/world/SALUD.png" id="3_eqbcq"]
[ext_resource type="FontFile" uid="uid://ci25tfsrji62c" path="res://resources/OptimusPrinceps.ttf" id="4_08ome"]
[ext_resource type="Texture2D" uid="uid://dhmpmqsf8ppug" path="res://resources/world/Inicio.png" id="5_mq4ko"]
[ext_resource type="Texture2D" uid="uid://bm83jxe8kl7os" path="res://resources/world/DEAD.png" id="6_dngo3"]

[sub_resource type="Gradient" id="Gradient_hsltg"]
offsets = PackedFloat32Array(0, 0.811321)
colors = PackedColorArray(1.92523e-06, 0, 0.653299, 1, 0, 0.329802, 0.329802, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_alkbf"]
gradient = SubResource("Gradient_hsltg")
width = 218
height = 24

[sub_resource type="Gradient" id="Gradient_6g5l4"]
offsets = PackedFloat32Array(0.0188679, 0.613208)
colors = PackedColorArray(1, 0.333333, 1, 1, 0.669821, 0.0536889, 0.173907, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ndvk2"]
gradient = SubResource("Gradient_6g5l4")
width = 218
height = 24

[sub_resource type="LabelSettings" id="LabelSettings_r7f7j"]
line_spacing = 10.0
font = ExtResource("4_08ome")
font_color = Color(0, 0.734117, 0.734117, 1)

[sub_resource type="Animation" id="Animation_0d6sp"]
resource_name = "a"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_elkb5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ox23c"]
resource_name = "b"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6fa4"]
_data = {
"RESET": SubResource("Animation_elkb5"),
"a": SubResource("Animation_0d6sp"),
"b": SubResource("Animation_ox23c")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goj53")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 218.0
offset_bottom = 90.0
size_flags_vertical = 0

[node name="O2_ProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
texture_over = ExtResource("2_088mj")
texture_progress = SubResource("GradientTexture2D_alkbf")

[node name="Vida_ProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
texture_over = ExtResource("3_eqbcq")
texture_progress = SubResource("GradientTexture2D_ndvk2")

[node name="Time_Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 0"
label_settings = SubResource("LabelSettings_r7f7j")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 4
texture = ExtResource("5_mq4ko")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer2"]
modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 4
texture = ExtResource("6_dngo3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_d6fa4")
}
